--- a/web/app/themes/damn-sage/assets/styles/layouts/_sidebar.scss
+++ b/web/app/themes/damn-sage/assets/styles/layouts/_sidebar.scss
@@ -179,6 +179,7 @@ h3.widget-title-black {
       @include blacktowhitelink;
       h2 {
         font-weight: 700;
+        font-size: 1.5em;
       }
       span {
         display: block;
